feat: add API quest mode
